# realm

./: EntryPoint.tscn  README.md  client.py  game.csproj  game.csproj.old  game.sln  icon.svg.import  pom.xml  project.godot  server.py  shatrang.glb  shatrang.glb.import
.mono/metadata/: api_assemblies.cfg
Assets/: icon.png.import
Scenes/Marker/: Marker.gd  marker_3d.tscn
Scenes/Page/: Page.cs  Page.gd  Page.tscn  Voxel.tscn
Scenes/Player/: Marker.gd  Player.tscn
World/: Location.cs  Page.cs  Player.cs  Voxel.tscn
assets/: icon.svg.import  shatrang.glb.import
godot/: Camera3D.gd  CameraDist.gd  CameraPitch.gd  CameraYaw.gd  Player.tscn  world.tscn
old/: EntryPoint.tscn  Page.cs  Point3D.cs  plan
python/: test.py
realm/: pom.xml
scenes/: Block.tscn  World.tscn
src/: pyproject.toml  test.py
src/data/: block.py  chunk.py  location.py  material.py  quest.py
src/gui/: login_page.py
src/junk/: cube.py
src/main/java/harleydutton/: GameController.java  Greeting.java  GreetingController.java  HelloMessage.java  Main.java  MessagingStompWebsocketApplication.java  WebSocketConfig.java  WebsocketConfiguration.java  WebsodketConfiguration.java
src/main/java/harleydutton/realm/: Greeting.java  GreetingController.java  HelloMessage.java  RealmApplication.java  WebSocketConfig.java
src/main/java/harleydutton/realm/data/: Greeting.java  HelloMessage.java
src/main/java/harleydutton/websocket-stuff/: WebsocketConfiguration.java
src/main/resources/: application.properties
src/network/: server.py
src/procedural/: generator.py
(+17 files in other folders)
