[project]
name = "realm_hdutton"
version = "0.0.1"
authors = [
  { name="Harley Dutton", email="harleydutton@gmail.com" },
]
description = "Multiplayer Roguelike Game"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
   # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/harleydutton/realm"
Issues = "https://github.com/harleydutton/realm/issues"
